--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@ionic-native/status-bar": "^5.24.0",
     "@ionic/angular": "^5.1.0",
     "core-js": "2",
+    "font-awesome": "^4.7.0",
     "rxjs": "^6.5.5",
     "tslib": "^1.11.1",
     "typescript": "^3.8.3",
