--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@ionic-native/splash-screen": "^5.24.0",
     "@ionic-native/status-bar": "^5.24.0",
     "@ionic/angular": "^5.1.0",
+    "angular-font-awesome": "^3.1.2",
     "core-js": "2",
     "font-awesome": "^4.7.0",
     "rxjs": "^6.5.5",
